# pinrs

./: Cargo.toml  Makefile  README.md  api  generate_data  pinrs.service  setup_db.sh
.github/workflows/: rust.yml
src/: import.rs  main.rs
src/api/: mod.rs
src/api/handlers/: bookmarks.rs  mod.rs  tags.rs
