[package]
name = "pinboard-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
url = "2.3"
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
random-string = "1.0.0"
serde_json = "1.0.95"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
