[package]
name = "pinrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
url = "2"
env_logger = "0.10"
log = "0.4"
hyper = "1"
mime = "0.3"
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "normalize-path"] }
tower = "0.5"

[dev-dependencies]
random-string = "1.0.0"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
