[package]
name = "pinrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["query"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
url = "2"
hyper = "1"
mime = "0.3"
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "normalize-path", "trace"] }
tower = "0.5"
chrono = "0.4.38"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
env_logger = "0.11.5"
clap = { version = "4.5.22", features = ["derive"] }
directories = "5.0.1"

[dev-dependencies]
random-string = "1.0.0"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
